--- a/css/Left.css
+++ b/css/Left.css
@@ -1,46 +1,46 @@
 #Main #Left {
 	float			: left;
 	width			: 200px;
-	padding-left	: 2px;			
+	padding-left		: 2px;			
 }
 
 /* User information div */
 #Main #Left #User {
-	width			: 98%;
+	width			: 198px;
 	border			: 2px solid #216778;
-	background-color: #FFF;
+	background-color	: #FFF;
 	display			: table;
-	height			: 15mm;	
+	height			: 60px;	
 }
 
 #Main #Left #User img {
 	float			: left;
-	margin			: 1mm;
+	margin			: 4px;
 	width			: 50px;
 	height			: 60px;
 }
 
 #Main #Left #User #UserInf {
 	float			: right;
-	margin-top		: 2mm;
-	width			: 32mm;
+	margin-top		: 8px;
+	width			: 125px;
 }
 
 #Main #Left #User p {
-	margin-top: 5%;
+	margin-top		: 5px;
 }
 
 #Main #Left #User span {
 	font-size		: 10px;
 	color			: #216778;
-	cursor		: pointer;
-	font-style:italic;
-	border-bottom:	1px solid #216778;
+	cursor			: pointer;
+	font-style		: italic;
+	border-bottom		: 1px solid #216778;
 }
 
 #Main #Left #User span:hover {
 	color			: #FFA200;
-	border-bottom:	1px solid #FFA200;
+	border-bottom		: 1px solid #FFA200;
 }
 
 #Main #Left #User h2 {
@@ -50,7 +50,7 @@
 }
 
 #Main #Left #User select {
-	width			: 78%;
+	width			: 95px;
 	font-size		: 10px;
 	color			: #FFA200;
 	border			: 1px solid #FFA200;
@@ -62,13 +62,15 @@
 	height			: 17px;
 }
 
+/*
 #Main #Left #User hr {
 	height			: 1px;
 	background-color	: #FFA200;
 	border			: 0px;
-	margin			:	1mm 0mm 1mm 0mm;
-	width				:	73%;
+	margin			: 1mm 0mm 1mm 0mm;
+	width			: 73%;
 }
+*/
 /* order by rating or nick */
 /*
 #Main #Left #order_nick, 
@@ -114,7 +116,7 @@
 	font-weight		: bold;
 	font-size		: 12px;
 	color			: #216778;
-	margin			: 1mm 0mm 0.5mm 0mm;
+	margin			: 4px 0px 2px 0px;
 }
 
 
