--- a/css/User.css
+++ b/css/User.css
@@ -1,38 +1,56 @@
 /*CSS default*/
 
 div .UserList{
+	padding-left		: 12px;
+	padding-top		: 4px;
+	font-size		: 11px;
+	/*
 	padding-left		: 3mm;
 	padding-top		: 1mm;
-	font-size		: 11px;
+	*/
 }
 
 div .UserList .UserTable{
 	overflow-y		: auto;
 	overflow-x		: hidden;
-	margin-top		:	2mm;
+	margin-top		: 8px;
+	/*
+	margin-top		: 2mm;
+	*/
 }
 
 div .UserList table{
 	display			: block;
+	border-spacing		: 0px;
+	height			: 100px;
+	width			: 155px;
+	margin-top		: 8px;
+	/*
 	height			: 25mm;
 	width			: 48mm;
 	margin-top		: 2mm;
-	border-spacing		: 0px;
+	*/
 }
 
 div .UserList tbody{
 	display			: block;
+	width			: 150px;
+	/*
 	width			: 44mm;
+	*/
 }
 
 
 div .UserList tr{
-	text-indent		: 5mm;
+	text-indent		: 20px;
 	margin			: 1px 0px;
 	height			: 16px;
 	list-style		: none;
 	font-size		: 11px;
 	cursor			: pointer;
+	/*
+	text-indent		: 5mm;
+	*/
 }
 
 div .UserList tr:hover {
@@ -40,14 +58,20 @@ div .UserList tr:hover {
 }
 
 div .UserList td{
-	width			: 41mm;
+	width			: 155px;
 	text-align		: left;
-	height : 17px;
+	height 			: 17px;
+	/*
+	width			: 41mm;
+	*/
 }
 
 div .UserList td.rating{
-	width			: 2mm;
+	width			: 8px;
 	text-align		: right;
+	/*
+	width			: 2mm;
+	*/
 }
 
 /*
@@ -91,14 +115,14 @@ div .UserList #order_nick
 {
 	color			: #216778;
 	cursor			: pointer;
-	font-size:	10px;
+	font-size		: 10px;
 }
 
 div .UserList #order_nick.selected
 {
 	color			: #FFA200;
 	font-weight             : bold !important;
-	border-bottom:	1px solid #FFA200;
+	border-bottom		: 1px solid #FFA200;
 }
 
 div .UserList #order_rating
@@ -106,11 +130,14 @@ div .UserList #order_rating
 	color			: #216778;
 	cursor			: pointer;
 	position                : absolute;
-	width                   : 56%;
+	width                   : 100px;
 	right                   : 3px;
 	text-align              : right;
 	font-size		: 10px;
 	border                  : 1px solid #216778;
+	/*
+	width                   : 56%;
+	*/
 }
 
 div .UserList #order_rating.selected
@@ -131,31 +158,47 @@ div .UserList #order_rating option.not_selected
 
 /*Contact list user list css*/
 #ContactInside .UserList{
+	padding-left		: 4px;
+	/*
 	padding-left		: 1mm;
+	*/
 }
 
 #ListDiv div .UserList table{
-	height			: 0mm;
-	margin-top		: 0mm;
+	height			: 0px;
+	margin-top		: 0px;
 }
 
 #ListDiv .UserList {
+	padding-left		: 1px;
+	padding-top		: 0px;
+	/*
 	padding-left		: 1mm;
-	padding-top		: 0mm;
+	*/
 }
 
 
 /*Contact online user list css*/
 #ContactOnline .UserList{
+	padding-left		: 4px;
+	height			: 145px;
+	/*
 	padding-left		: 1mm;
 	height			: 37.7mm;
+	*/
 }
 
 #ContactOnline .UserTable{
+	height			: 125px;
+	/*
 	height			: 32mm;
+	*/
 }
 
 /*Room list user list css*/
 #Rooms div .UserList .UserTable{
+	height			: 80px;
+	/*
 	height			: 22mm;
+	*/
 }
