Fixed: Login page CSS in IE;

--- a/css/LoadIE.css
+++ b/css/LoadIE.css
@@ -1,3 +1,8 @@
+#LoginDiv p{
+	font-size		: 12px;	
+	font-weight		: normal;
+}
+
 #LoadDiv h1{
 	background		: url("../images/ie/logo.gif") no-repeat;
 }
