--- a/css/Login.css
+++ b/css/Login.css
@@ -37,7 +37,7 @@
 #LoginDiv #FormDiv label {
 	font-size		: 10px;
 	color			: #216778;
-	margin-left		: 2mm;
+	margin-left		: 8px;
 }
 
 #LoginDiv #FormDiv input {
@@ -48,17 +48,17 @@
 
 #LoginDiv #FormDiv td {
 	padding			: 3px;
-	vertical-align	: top;
+	vertical-align		: top;
 }
 
 #LoginDiv #FormDiv .checkbox {
-	margin-top		: 3mm;
+	margin-top		: 12px;
 }
 
 #LoginDiv #FormDiv .entrar {
 	margin-top		: 10px;
-	margin-bottom	: 5mm;
-	background-image: url("../images/login/login_botao_ok.png");
+	margin-bottom		: 24px;
+	background-image	: url("../images/login/login_botao_ok.png");
 	border			: 0px;
 	width			: 30px;
 	height			: 18px;
@@ -66,13 +66,13 @@
 }
 
 #LoginDiv #FormDiv .entrar:hover {
-	background-image: url("../images/login/login_botao_ok_selec.png");
+	background-image	: url("../images/login/login_botao_ok_selec.png");
 }
 
 #LoginDiv #FormDiv .signin {
 	position		: absolute;
-	top				: -10mm;
-	left			: 23mm;
+	top			: -40px;
+	left			: 80px;
 }
 
 #LoginDiv #FormDiv .botao {
@@ -90,7 +90,7 @@
 
 #LoginDiv #FormDiv a {
 	display			: block;
-	margin-top		: 2mm;
+	margin-top		: 8px;
 	font-weight		: bold;
 	font-size		: 13px;
 	color			: #216778;
@@ -113,15 +113,15 @@
 }
 
 #LoginDiv p {
-	font-size		: 3mm;
+	font-size		: 12px;
 	color			: #216778;
-	margin-bottom	: 3mm;
+	margin-bottom		: 12px;
 }
 
 #LoginDiv a {
-	font-size		: 3mm;
+	font-size		: 12px;
 	color			: #216778;
-	margin-bottom	: 2mm;
+	margin-bottom		: 4px;
 }
 #BannerLogin {
 	position		: relative;
@@ -175,5 +175,5 @@
 }
 
 #LangDiv li:hover {
-	text-decoration	: underline;
+	text-decoration		: underline;
 }
