Modified: Change save profile button's style when mouse cursor is over it

--- a/css/Profile.css
+++ b/css/Profile.css
@@ -188,6 +188,9 @@
 	width						: 120px;
 }
 
+#WindowBox .button_big:hover {
+	background-color: #FFA200;
+}
 
 #ProfileConfirmDiv {
 	padding-top	:	10px;
