--- a/css/User.css
+++ b/css/User.css
@@ -196,9 +196,29 @@ div .UserList #order_rating option.not_selected
 }
 
 /*Room list user list css*/
+#Rooms div .UserList{
+	position		: absolute;
+	left			: 200px;
+	width			: 150px;
+
+	border			: 2px solid #216778;
+	background-color	: #FFF;
+
+	padding			: 4px 0px 4px 5px;
+}
+
 #Rooms div .UserList .UserTable{
 	height			: 80px;
 	/*
 	height			: 22mm;
 	*/
+}
+
+#Rooms div .UserList td{
+	width			: 95px;
+}
+
+#Rooms div .UserList td.rating{
+	width			: 8px;
+	text-indent		: 10px;
 }
