Added: Change hide word when click to show user list in room; Added: Show and hide user list strings in pt_BR.xml; Changed: Load show/hide user from language XML; Added: zIndex to room user list to open over any center content (IE need fix);

--- a/css/User.css
+++ b/css/User.css
@@ -205,6 +205,8 @@ div .UserList #order_rating option.not_selected
 	background-color	: #FFF;
 
 	padding			: 4px 0px 4px 5px;
+
+	z-index			: 1;
 }
 
 #Rooms div .UserList .UserTable{
