Added: Elements to show "loading" string when send a message to get all current games and conference rooms and wait response; Added: Loading elements CSS; Added: Show and remove loading elements when click to open menus and receive response, respective;

--- a/css/TopMenus.css
+++ b/css/TopMenus.css
@@ -109,3 +109,11 @@
 	margin-top:	1px;
 	margin-bottom:	1px;
 }
+
+#DivLoadBox, #DivNoGames
+{
+	position		: absolute;
+
+	color			: #216778;
+	font-size		: 11px;
+}
