Fixed: User position open correctly in room user list; Changed: Room user list table height CSS;

--- a/css/User.css
+++ b/css/User.css
@@ -209,6 +209,10 @@ div .UserList #order_rating option.not_selected
 	z-index			: 1;
 }
 
+#Rooms div .UserList table{
+	height			: 70px;
+}
+
 #Rooms div .UserList .UserTable{
 	height			: 80px;
 	/*
