--- a/css/TopMenus.css
+++ b/css/TopMenus.css
@@ -76,7 +76,7 @@
 #Page #ChallengeMenuDiv p:hover,
 #Page #GameRoomMenuDiv li:hover,
 #Page #GameRoomMenuDiv p:hover {
-	background-color: #EAF4F5;
+	background-color: #DAF3F5;
 }
 
 #Page #RoomMenuDiv hr {
