--- a/css/User.css
+++ b/css/User.css
@@ -54,7 +54,7 @@ div .UserList tr{
 }
 
 div .UserList tr:hover {
-	background-color	: #EAF5F4;
+	background-color	: #DAF3F5;
 }
 
 div .UserList td{
