--- a/css/Rooms.css
+++ b/css/Rooms.css
@@ -119,7 +119,7 @@
 	width			: 105px;
 	height			: 120px;
 	border			: 2px solid #216778;
-	background-color	: #EAF5F4;
+	background-color	: #DAF3F5;
 	cursor			: pointer;
 	z-index			: 3;
 	/*
