Added: Loading move messages in language XML (pt_BR.xml) Added: Show and hide "Loading move" in board when send player make a move; Added: Loading move CSS; Remove: Some commented code in utils/dragpiece.js;

--- a/css/Board.css
+++ b/css/Board.css
@@ -576,3 +576,14 @@
 #MoveListLast:hover {
 	background-image	: url("../images/board/last_active.png");
 }
+
+#GameLoadingMove{
+	position		: absolute;
+	width			: 300px;
+	height			: 100px;
+
+	font-size		: 13px;
+	color			: #216778
+
+	background-color	: #FFF;
+}
