--- a/css/Profile.css
+++ b/css/Profile.css
@@ -61,6 +61,23 @@
 	padding-top	: 2px;
 }
 
+#ProfileDiv #WhoDiv #CounterDiv {
+	margin-top : 3px;
+	margin-left : 180px;
+}
+
+#ProfileDiv #WhoDiv #CounterDiv span {
+	font-size : 9px;
+	font-style : italic;
+	color : #216778;
+	padding-left : 3px;
+}
+
+#ProfileDiv .counter_input {
+	text-align : right;
+	color : #216778;
+}
+
 #ProfileDiv #TimeDiv,
 #ProfileDiv #BottomDiv {
 	display	:	table;
