--- a/css/Board.css
+++ b/css/Board.css
@@ -587,3 +587,25 @@
 
 	background-color	: #FFF;
 }
+
+#GameLoadingMove
+{
+	width			: 160px;
+	height			: 17px;
+
+	background-color	: #FFF;
+
+	font-size		: 12px;
+	color			: #216778;
+
+	position		: fixed;
+	bottom			: 10px;
+	left			: 50%;
+	margin-left		: -50px;
+
+	padding			: 2px 15px;
+
+	border			: 1px solid #216778;
+
+
+}
