Added: Change background color in challenge menu for items;

--- a/css/ChallengeMenu.css
+++ b/css/ChallengeMenu.css
@@ -54,6 +54,11 @@
 	width		: 210px;
 }
 
+#ChallengeMenu li:hover
+{
+	background-color: #D4F3F5;
+}
+
 #ChallengeMenu li.offline
 {
 	color		: #777777;
