Fixed: Changed cursor when mouse pointer is over a off line postpone "v" button;

--- a/css/ChallengeMenu.css
+++ b/css/ChallengeMenu.css
@@ -167,6 +167,7 @@
 {
 	background-image: url('../images/challenge_menu/accept_disable.png');
 	background-repeat: no-repeat;
+	cursor		: default;
 }
 
 #ChallengeMenu li #date
